style/index.css
* {
	/* border: 1px solid black;  */

	box-sizing: border-box;
	text-decoration: none;
}

html {
	font-size: 62.5%;
}

h1,
h2,
h3,
h4,
h5 {
	font-family: 'Oswald', sans-serif;
}

p,
a {
	font-family: 'Grandstander', cursive;
}

html,
body,
div,
span,
applet,
object,
iframe,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
del,
dfn,
em,
font,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend {
	vertical-align: baseline;
	font-weight: inherit;
	font-style: inherit;
	font-size: 100%;
	outline: 0;
	padding: 0;
	margin: 0;
	border: 0;
}

/* remember to define focus styles! */
:focus {
	outline: 0;
}

body {
	background: #eeeeee;
	line-height: 1;
	color: #222831;
}

ol,
ul {
	list-style: none;
}

/* tables still need cellspacing="0" in the markup */
table {
	border-collapse: separate;
	border-spacing: 0;
}

caption,
th,
td {
	font-weight: normal;
	text-align: left;
}

/* remove possible quote marks (") from <q> & <blockquote> */
blockquote:before,
blockquote:after,
q:before,
q:after {
	content: "";
}

blockquote,
q {
	quotes: """";
}

header nav, a {
	color: #eeeeee;
}

header nav {
	background-color: #222831;
	margin-bottom: 5%;
	height: 15vh;
}

header nav h1 {
	font-size: 2.0rem;
	padding: 2% 2%;
}

header nav a {
	font-size: 1.2rem;
	padding: 2%;
}

header .main {
	display: flex;
}

header .image img {
	width: 90%;
	margin: 0 5%;
}

header .content h2,
a,
p {
	margin: 0.5% 0;
}

header .content {
	display: flex;
	flex-direction:  column;
	line-height: 2;
}

header .content h2 {
	font-size: 3.0rem;
}

header .content a {
	text-align: center;
	border-radius: 10px;
	width: 15%;
	font-size: 1rem;
	background-color: #222831;
	padding: 0.5%;;
}

header .content p {
	width: 60%;
	font-size: 1.2rem;
}

.mid-images {
	display: flex;
	flex-wrap: wrap;
	padding: 5% 1%;
}

.mid-images img {
	padding: 2% 2%;
	width: 25%;
	height: 30vh;
}

footer {
	display: flex;
	flex-direction: column;
	align-items: center;
	background: #222831;
	height: 25vh;
}

footer h2 {
	color: #eeeeee;
	font-size: 1.5rem;
	margin: 25% 0;
}

footer a {
	font-size: 1.1rem;
	display: flex;
	justify-content: center;
	height: 25%;
	padding: 10%;
	border-radius: 10px;
	background-color: #eeeeee;
	color: #222831;
}

.social {
	display: flex;
	justify-content: center;
}

.social a {
	background: none;
	color: white;
	height: 6vh;
}

@media (max-width: 800px){
	
	header nav {
		height: 10vh;
	}

	header .image {
		display: none;
	}

	header .content {
		align-items: center;
	}

	header .content a{
		width: 25%;
	}

	header .content p{
		text-align: center;
		width: 80%;
	}

	.mid-images img{
		width: 50%;
}

@media (max-width: 500px){

	header nav {
		padding: 5% 2%;
		height: 8vh;
	}

	header nav h1{
		display: none;
	}

	.mid-images img{
		width: 100%;
}

